[package]
name = "meme-giveaway"
version = "0.1.0"
edition = "2021"
description = "MEME token giveaway program for Twitter"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.10"
borsh-derive = "0.10"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"

[lib]
crate-type = ["cdylib", "lib"]
